--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Dictionaries/css/itjakub.dictionaries.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Dictionaries/css/itjakub.dictionaries.less
@@ -41,10 +41,6 @@
     width: 65%;
 }
 
-.searchbar-inputs {
-    margin-right: 74px;
-}
-
 .saved-word-area {
     background-color: white;
     height: 100%;
@@ -438,7 +434,7 @@ div .sense {
 }
 
 .dicitonaries-search .searchbar-inputs {
-    margin-right: 75px;
+    width: 100%;
 }
 
 
