--- a/UJCSystem/ITJakub.Web.Hub/Views/Shared/_Layout.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
     <link asp-append-version="true" href="~/lib/bootstrap-colorpicker-plus/dist/css/bootstrap-colorpicker.min.css" rel="stylesheet" />
     <link asp-append-version="true" href="~/lib/bootstrap-colorpicker-plus/dist/css/bootstrap-colorpicker-plus.min.css" rel="stylesheet" />
     <link asp-append-version="true" href="~/lib/s-pagination/dist/pagination.css" rel="stylesheet" />
+    <link asp-append-version="true" href="~/lib/bootstrap-select/dist/css/bootstrap-select.css" rel="stylesheet" />
     <link asp-append-version="true" href="~/css/ITJakubStyle.css" rel="stylesheet" />
     <link asp-append-version="true" href="~/css/lib.loading-visualization.css" rel="stylesheet" />
     @RenderSection("styles", false)
@@ -102,10 +103,12 @@
         <script asp-append-version="true" src="~/lib/bootstrap-colorpicker-plus/dist/js/bootstrap-colorpicker.js"></script>
         <script asp-append-version="true" src="~/lib/bootstrap-colorpicker-plus/dist/js/bootstrap-colorpicker-plus.js"></script>
         <script asp-append-version="true" src="~/lib/s-pagination/dist/pagination.js"></script>
+        <script asp-append-version="true" src="~/lib/bootstrap-select/dist/js/bootstrap-select.js"></script>
         <script asp-append-version="true" src="~/lib/bootbox/bootbox.js"></script>
         <script asp-append-version="true" src="~/lib/dropzone/dist/dropzone.js"></script>
         <script asp-append-version="true" src="~/lib/he/he.js"></script>
         <script asp-append-version="true" src="~/lib/urijs/src/URI.min.js"></script>
+        <script asp-append-version="true" src="~/lib/loading-visualization/dist/main.js"></script>
         @*<script asp-append-version="true" src="~/lib/modernizr/modernizr.js"></script>*@
 
         <script asp-append-version="true" src="~/js/Plugins/Keyboard/itjakub.keyboard.bundle.js"></script>
@@ -113,14 +116,6 @@
         <script asp-append-version="true" src="~/js/itjakub.bundle.js"></script>
         <script asp-append-version="true" src="~/js/Plugins/itjakub.plugins.bundle.js"></script>
         <script asp-append-version="true" src="~/js/Favorite/itjakub.favorite.bundle.js"></script>
-        <script asp-append-version="true" src="~/lib/loading-visualization/dist/main.js"></script>
-        <script>
-            $(document).ready(function() {
-                var loader = new lv();
-                loader.initLoaderAll();
-                loader.startObserving();
-            });
-        </script>
 
         @RenderSection("scripts", false)
 
