Remove tabs in editor, links moved to left menu

--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/_ProjectResource.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/_ProjectResource.cshtml
@@ -1,5 +1,4 @@
-﻿@using ITJakub.Web.Hub.Areas.Admin.Models
-@using ITJakub.Web.Hub.Areas.Admin.Models.Type
+﻿@using ITJakub.Web.Hub.Areas.Admin.Models.Type
 @using Scalesoft.Localization.AspNetCore
 @inject ILocalizationService Localizer
 
