--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -108,6 +108,11 @@
     .left-menu {
         width: 200px;
         padding-right: 10px;
+        vertical-align: top;
+    }
+    
+    .parent-item {
+        background-color: #f5f5f5;
     }
 
     .vertical-splitter-control {
