--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Project.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Project.cshtml
@@ -47,13 +47,23 @@
         <div class="left-menu" id="left-menu">
             <div class="project-title">@Model.Name<br/><span class="text-type">@TextTypeLocalizer.TranslateTextTypeFull(Model.TextType)</span></div>
             <div class="list-group list-group-root" id="project-navigation">
-                <a href="#" class="list-group-item active" id="project-navigation-root">@Localizer.Translate("Project", "Admin")</a>
+                <span class="list-group-item parent-item">@Localizer.Translate("Project", "Admin")</span>
                 <div class="list-group">
-                    <a href="#" class="list-group-item" id="project-navigation-image">@Localizer.Translate("ImageScan", "Admin")</a>
+                    <a href="#" class="list-group-item active" id="project-work-page-list" data-panel-type="@Html.Raw((int)ProjectModuleTabType.WorkPageList)">@Localizer.Translate("PageList", "Admin")</a>
+                    <a href="#" class="list-group-item" id="project-work-chapter-editor" data-panel-type="@Html.Raw((int) ProjectModuleTabType.WorkChapters)">@Localizer.Translate("Chapters", "Admin")</a>
                     <a href="#" class="list-group-item" id="project-navigation-text">@Localizer.Translate("Texts", "Admin")</a>
-                    <a href="#" class="list-group-item" id="project-navigation-audio">@Localizer.Translate("Audio", "Admin")</a>
+                    <a href="#" class="list-group-item" id="project-navigation-image">@Localizer.Translate("ImageScan", "Admin")</a>
                     <a href="#" class="list-group-item" id="project-navigation-terms">@Localizer.Translate("Terms", "Admin")</a>
-                    <a href="#" class="list-group-item" id="project-work-metadata" data-panel-type="@Html.Raw((int)ProjectModuleTabType.WorkMetadata)">Metadata</a>
+                    <a href="#" class="list-group-item" id="project-work-note" data-panel-type="@Html.Raw((int) ProjectModuleTabType.WorkNote)">@Localizer.Translate("EditionNote", "Admin")</a>
+                </div>
+                <span class="list-group-item parent-item">@Localizer.Translate("InfoAboutWork", "Admin")</span>
+                <div class="list-group">
+                    <a href="#" class="list-group-item" id="project-work-publications" data-panel-type="@Html.Raw((int)ProjectModuleTabType.WorkMetadata)">@Localizer.Translate("Publication", "Admin")</a>
+                    <a href="#" class="list-group-item" id="project-work-cooperation" data-panel-type="@Html.Raw((int) ProjectModuleTabType.WorkCooperation)">@Localizer.Translate("Cooperation", "Admin")</a>
+                    <a href="#" class="list-group-item" id="project-work-metadata" data-panel-type="@Html.Raw((int) ProjectModuleTabType.WorkMetadata)">@Localizer.Translate("Metadata", "Admin")</a>
+                    <a href="#" class="list-group-item" id="project-work-categorization" data-panel-type="@Html.Raw((int) ProjectModuleTabType.WorkCategorization)">@Localizer.Translate("Categorization", "Admin")</a>
+                    <a href="#" class="list-group-item" id="project-work-history" data-panel-type="@Html.Raw((int) ProjectModuleTabType.WorkHistory)">@Localizer.Translate("History", "Admin")</a>
+                    <a href="#" class="list-group-item" id="project-forum" data-panel-type="@Html.Raw((int) ProjectModuleTabType.Forum)">@Localizer.Translate("Forum", "Admin")</a>
                 </div>
             </div>
 
