--- a/UJCSystem/ITJakub.Web.Hub/Areas/Bibliographies/Views/Bibliographies/Search.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Bibliographies/Views/Bibliographies/Search.cshtml
@@ -1,4 +1,5 @@
-﻿@using Scalesoft.Localization.AspNetCore
+﻿@using ITJakub.Web.Hub.Constants
+@using Scalesoft.Localization.AspNetCore
 @inject ILocalizationService Localizer
 
 @section styles{
@@ -10,6 +11,7 @@
 
 @{
     ViewBag.Title = @Localizer.Translate("BibliographiesSearch", "Bibliographies");
+    ViewData[BibliographyConstants.IsSearchAreaSelectionEnabled] = true;
 }
 
 @await Html.PartialAsync("_BibliographySearch")
