Editors - improve layout responsivity, improve forum view

--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Project.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Project.cshtml
@@ -61,7 +61,7 @@
                 </div>
                 <span class="list-group-item parent-item">@Localizer.Translate("InfoAboutWork", "Admin")</span>
                 <div class="list-group">
-                    <a href="#" class="list-group-item" id="project-work-publications" data-panel-type="@Html.Raw((int) ProjectModuleTabType.WorkMetadata)">@Localizer.Translate("Publication", "Admin")</a>
+                    <a href="#" class="list-group-item" id="project-work-publications" data-panel-type="@Html.Raw((int) ProjectModuleTabType.WorkPublications)">@Localizer.Translate("Publication", "Admin")</a>
                     <a href="#" class="list-group-item" id="project-work-cooperation" data-panel-type="@Html.Raw((int) ProjectModuleTabType.WorkCooperation)">@Localizer.Translate("Cooperation", "Admin")</a>
                     <a href="#" class="list-group-item" id="project-work-metadata" data-panel-type="@Html.Raw((int) ProjectModuleTabType.WorkMetadata)">@Localizer.Translate("Metadata", "Admin")</a>
                     <a href="#" class="list-group-item" id="project-work-categorization" data-panel-type="@Html.Raw((int) ProjectModuleTabType.WorkCategorization)">@Localizer.Translate("Categorization", "Admin")</a>
