--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_ChapterEditor.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_ChapterEditor.cshtml
@@ -19,12 +19,12 @@
             <div class="panel panel-default chapters">
                 <div class="panel-heading">
                     <div class="row">
-                        <div class="col-xs-12 col-md-4">
+                        <div class="col-xs-12 col-sm-3">
                             <div class="panel-title">
                                 @Localizer.Translate("Chapters", "Admin")
                             </div>
                         </div>
-                        <div class="col-xs-12 col-md-8 panel-buttons text-right">
+                        <div class="col-xs-12 col-sm-9 panel-buttons text-right">
                             <button type="button" class="btn btn-default form-control" id="project-chapters-edit-button">@Localizer.Translate("CreateChapter", "Admin")</button>
                             <button type="button" class="btn btn-default form-control" id="generateChapters">@Localizer.Translate("GenerateChapters", "Admin")</button>
                         </div>
