--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_Forum.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_Forum.cshtml
@@ -4,48 +4,69 @@
 
 <div class="container-fluid">
     <div class="row"></div>
-    <div class="form-horizontal">
-        <div class="form-group">
-            <label class="col-md-3 control-label">
-                @Localizer.Translate("Name", "Admin")
-            </label>
-            <div class="col-md-9">
-                <span id="forum-name" class="text-as-form-control">
-                    @(Model != null ? Model.Name : "-")
-                </span>
+    <div class="col-xs-12 col-md-9 col-lg-7">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <div class="panel-title">
+                    <div class="row">
+                        <div class="col-xs-10">
+                            <div class="panel-title text-left">
+                                Obsah stránky
+                            </div>
+                        </div>
+                        <div class="col-xs-2 text-right">
+                            <i class="hide fa fa-file-text-o" title="Stránka obsahuje text"></i>
+                            <i class="fa fa-image" title="Stránka obsahuje obrázek"></i>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label class="col-md-3 control-label">
-                @Localizer.Translate("URL", "Admin")
-            </label>
-            <div class="col-md-9">
-                <span id="forum-url" class="text-as-form-control">
-                    @if (Model != null)
-                    {
-                        <a href="@Model.Url">@Model.Url</a>
-                    }
-                    else
-                    {
-                        <span>-</span>
-                    }
-                </span>
+            <div class="panel-body">
+                <div class="form-horizontal">
+                    <div class="form-group">
+                        <label class="col-md-3 control-label">
+                            @Localizer.Translate("Name", "Admin")
+                        </label>
+                        <div class="col-md-9">
+                            <span id="forum-name" class="text-as-form-control">
+                                @(Model != null ? Model.Name : "-")
+                            </span>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-md-3 control-label">
+                            @Localizer.Translate("URL", "Admin")
+                        </label>
+                        <div class="col-md-9">
+                            <span id="forum-url" class="text-as-form-control">
+                                @if (Model != null)
+                                {
+                                    <a href="@Model.Url">@Model.Url</a>
+                                }
+                                else
+                                {
+                                    <span>-</span>
+                                }
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                @if (Model == null)
+                {
+                    <div class="row" id="forum-repair-block">
+                        <div class="col-xs-12">
+                            <b>@Localizer.Translate("ForumRepairText", "Admin")</b>
+                            <div id="forum-button-panel">
+                                <div class="alert alert-success" id="forum-repair-success">@Localizer.Translate("ForumRepairSuccess", "Admin")</div>
+                                <div class="alert alert-danger" id="forum-repair-error">@Localizer.Translate("ForumRepairError", "Admin")</div>
+                                <button type="submit" id="forum-repair-button" class="btn btn-default save-button">
+                                    <span class="saving-icon loading-small-button"></span>@Localizer.Translate("Repair", "Admin")
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                }
             </div>
         </div>
     </div>
-    @if (Model == null)
-    {
-        <div class="row" id="forum-repair-block">
-            <div class="col-xs-12">
-                <b>@Localizer.Translate("ForumRepairText", "Admin")</b>
-                <div id="forum-button-panel">
-                    <div class="alert alert-success" id="forum-repair-success">@Localizer.Translate("ForumRepairSuccess", "Admin")</div>
-                    <div class="alert alert-danger" id="forum-repair-error">@Localizer.Translate("ForumRepairError", "Admin")</div>
-                    <button type="submit" id="forum-repair-button" class="btn btn-default save-button">
-                        <span class="saving-icon loading-small-button"></span>@Localizer.Translate("Repair", "Admin")
-                    </button>
-                </div>
-            </div>
-        </div>
-    }
 </div>
