--- a/UJCSystem/ITJakub.Web.Hub/Views/Home/Index.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Views/Home/Index.cshtml
@@ -78,7 +78,7 @@
                     <a href="@Url.Action("Feed", "News", new {feedType = FeedType.Rss.ToString()})" class="news-feed-rss"></a>
                 </div>
 
-                <div id="news-container"></div>
+                <div id="news-container" data-page-size="@PageSizes.News"></div>
 
                 <div id="news-paginator" class="centered"></div>
 
