--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -170,6 +170,12 @@
     font-size: 120%;
     margin-bottom: 20px;
 
+    .rename-project-button {
+        padding: 2px 6px;
+        font-size: 12px;
+        margin-left: 0.5em;
+    }
+    
     .text-type {
         color: gray;
         font-size: 80%;
