Editors - fix project renaming

--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Project.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Project.cshtml
@@ -47,8 +47,8 @@
     <div class="row project-layout">
        
         <div class="col-xs-12">
-            <div class="project-title">
-                @Model.Name
+            <div class="project-title-header">
+                <span class="project-title">@Model.Name</span>
                 <button class="rename-project-button btn btn-default" title="@Localizer.Translate("Rename", "Admin")">
                     <i class="fa fa-pencil"></i>
                 </button>
