--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_Forum.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_Forum.cshtml
@@ -4,19 +4,15 @@
 
 <div class="container-fluid">
     <div class="row"></div>
-    <div class="col-xs-12 col-md-9 col-lg-7">
+    <div class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
         <div class="panel panel-default">
             <div class="panel-heading">
                 <div class="panel-title">
                     <div class="row">
-                        <div class="col-xs-10">
+                        <div class="col-xs-12">
                             <div class="panel-title text-left">
-                                Obsah stránky
+                                @Localizer.Translate("Forum", "Admin")
                             </div>
-                        </div>
-                        <div class="col-xs-2 text-right">
-                            <i class="hide fa fa-file-text-o" title="Stránka obsahuje text"></i>
-                            <i class="fa fa-image" title="Stránka obsahuje obrázek"></i>
                         </div>
                     </div>
                 </div>
@@ -55,7 +51,9 @@
                 {
                     <div class="row" id="forum-repair-block">
                         <div class="col-xs-12">
-                            <b>@Localizer.Translate("ForumRepairText", "Admin")</b>
+                            <div class="alert alert-warning">
+                                <i class="fa fa-warning"></i> @Localizer.Translate("ForumRepairText", "Admin")
+                            </div>
                             <div id="forum-button-panel">
                                 <div class="alert alert-success" id="forum-repair-success">@Localizer.Translate("ForumRepairSuccess", "Admin")</div>
                                 <div class="alert alert-danger" id="forum-repair-error">@Localizer.Translate("ForumRepairError", "Admin")</div>
