--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_Categorization.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_Categorization.cshtml
@@ -57,9 +57,7 @@
                                 </div>
                             }
                         </div>
-                    </div>
-                    <div class="add-button col-sm-offset-3 col-md-offset-4 col-lg-offset-3 col-sm-8">
-                        <button class="btn btn-default" id="add-literary-genre-button">@Localizer.Translate("Add", "Admin")</button>
+                        <button class="add-button btn btn-default" id="add-literary-genre-button">@Localizer.Translate("Add", "Admin")</button>
                     </div>
                 </div>
                 <div class="form-group">
@@ -100,9 +98,7 @@
                                 </div>
                             }
                         </div>
-                    </div>
-                    <div class="add-button col-sm-offset-3 col-md-offset-4 col-lg-offset-3 col-sm-8">
-                        <button class="btn btn-default" id="add-literary-kind-button">@Localizer.Translate("Add", "Admin")</button>
+                        <button class="add-button btn btn-default" id="add-literary-kind-button">@Localizer.Translate("Add", "Admin")</button>
                     </div>
                 </div>
                 <div class="form-group">
