Text editor - add page dialog

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -1226,6 +1226,12 @@ table {
                                 cursor: not-allowed;
                             }
                         }
+                        
+                        .itj-page {
+                            font-family: 'Times New Roman', Times, serif;
+                            text-align: justify;
+                            font-size: 115%;
+                        }
                     }
                 }
             }
