--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Resource/_Preview.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Resource/_Preview.cshtml
@@ -13,7 +13,7 @@
         </div>
     </div>
     <div class="row page-menu-row">
-        <div class="col-xs-2">
+        <div class="col-xs-12 col-lg-2">
             <div class="input-group">
                 <input type="text" class="form-control go-to-page-field" placeholder="@Localization.Translate("GoToPage", "RidicsProject")" aria-label="@Localization.Translate("GoToPage", "RidicsProject")">
                 <span class="input-group-btn">
@@ -23,10 +23,13 @@
                 </span>
             </div>
         </div>
-        <div class="col-xs-4"></div>
-        <div class="col-xs-2 page-indicator"></div>
-        <div class="col-xs-2"></div>
         <div class="col-xs-2">
+             <button type="button" class="btn btn-default add-page-button">@Localization.Translate("AddPage", "Admin")</button>
+        </div>
+        <div class="col-lg-2"></div>
+        <div class="col-lg-2 page-indicator"></div>
+        <div class="col-lg-2"></div>
+        <div class="col-lg-2">
             <div class="checkbox">
                 <label class="checkbox-inline">
                     <input type="checkbox" class="display-page-checkbox" checked="checked">
@@ -44,4 +47,6 @@
             </div>
         </div>
     </div>
+    
+    @await Html.PartialAsync("Work/SubView/_AddPageDialog")
 </div>
