Text editor - improve responsivity

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -1298,6 +1298,7 @@ table {
         }
 
         .page-indicator {
+            text-align: center;
             font-size: 1.2em;
             color: @page-indicator-text-color;
             font-weight: bold;
