--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Resource/_Preview.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Resource/_Preview.cshtml
@@ -13,7 +13,7 @@
         </div>
     </div>
     <div class="row page-menu-row">
-        <div class="col-xs-12 col-lg-2">
+        <div class="col-xs-12 col-sm-6 col-md-3">
             <div class="input-group">
                 <input type="text" class="form-control go-to-page-field" placeholder="@Localization.Translate("GoToPage", "RidicsProject")" aria-label="@Localization.Translate("GoToPage", "RidicsProject")">
                 <span class="input-group-btn">
@@ -22,14 +22,16 @@
                     </button>
                 </span>
             </div>
+            
+            
         </div>
-        <div class="col-xs-2">
-             <button type="button" class="btn btn-default add-page-button">@Localization.Translate("AddPage", "Admin")</button>
+        
+        <div class="col-xs-12 col-sm-6 col-md-2">
+            <button type="button" class="btn btn-default add-page-button">@Localization.Translate("AddPage", "Admin")</button> 
         </div>
-        <div class="col-lg-2"></div>
-        <div class="col-lg-2 page-indicator"></div>
-        <div class="col-lg-2"></div>
-        <div class="col-lg-2">
+        
+        <div class="col-xs-12 col-sm-12 col-md-2 page-indicator"></div>
+        <div class="col-xs-12 col-sm-12 col-md-5 text-right">
             <div class="checkbox">
                 <label class="checkbox-inline">
                     <input type="checkbox" class="display-page-checkbox" checked="checked">
