Minor fix styles in assigning project to group

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -607,7 +607,9 @@ table {
     #work-categorization-invalid-keyword-fail {
         display: none;
     }
+}
 
+#work-categorization-container, #add-project-to-group-dialog {
     .page-listing {
         height: auto;
         min-height: 200px;
