Hide forum warning alert immediately after creating forum

--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_Forum.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_Forum.cshtml
@@ -51,7 +51,7 @@
                 {
                     <div class="row" id="forum-repair-block">
                         <div class="col-xs-12">
-                            <div class="alert alert-warning">
+                            <div class="alert alert-warning" id="missing-forum-warning">
                                 <i class="fa fa-warning"></i> @Localizer.Translate("ForumRepairText", "Admin")
                             </div>
                             <div id="forum-button-panel">
