Improve layout for save button in page list and chapter list editor

--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_ChapterEditor.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_ChapterEditor.cshtml
@@ -75,8 +75,9 @@
             </div>
         </div>
     </div>
-
-    <div class="project-bottom-buttons">
+    
+    <hr style="margin: 0 15px 10px 15px;" />
+    <div class="project-bottom-buttons" style="padding-right: 15px;">
         <button type="button" class="btn btn-default save-chapters-button">@Localizer.Translate("Save", "Admin")</button>
     </div>
 </div>
