--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_PageList.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_PageList.cshtml
@@ -71,6 +71,7 @@
         </div>
     </div>
 
+    <hr style="margin: 0 15px 10px 15px;" />
     <div class="project-bottom-buttons">
         <button type="button" class="btn btn-default save-pages-button">@Localizer.Translate("Save", "Admin")</button>
     </div>
