Change default active tab in project editor to Snapshots

--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Project.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Project.cshtml
@@ -61,7 +61,7 @@
             <div class="list-group list-group-root" id="project-navigation">
                 <span class="list-group-item parent-item">@Localizer.Translate("Project", "Admin")</span>
                 <div class="list-group">
-                    <a href="#" class="list-group-item active" id="project-work-page-list" data-panel-type="@Html.Raw((int) ProjectModuleTabType.WorkPageList)">@Localizer.Translate("PageList", "Admin")</a>
+                    <a href="#" class="list-group-item" id="project-work-page-list" data-panel-type="@Html.Raw((int) ProjectModuleTabType.WorkPageList)">@Localizer.Translate("PageList", "Admin")</a>
                     <a href="#" class="list-group-item" id="project-work-chapter-editor" data-panel-type="@Html.Raw((int) ProjectModuleTabType.WorkChapters)">@Localizer.Translate("Chapters", "Admin")</a>
                     <a href="#" class="list-group-item" id="project-navigation-text">@Localizer.Translate("Texts", "Admin")</a>
                     <a href="#" class="list-group-item" id="project-navigation-image">@Localizer.Translate("ImageScan", "Admin")</a>
@@ -70,7 +70,7 @@
                 </div>
                 <span class="list-group-item parent-item">@Localizer.Translate("InfoAboutWork", "Admin")</span>
                 <div class="list-group">
-                    <a href="#" class="list-group-item" id="project-work-publications" data-panel-type="@Html.Raw((int) ProjectModuleTabType.WorkPublications)">@Localizer.Translate("Publication", "Admin")</a>
+                    <a href="#" class="list-group-item active" id="project-work-publications" data-panel-type="@Html.Raw((int) ProjectModuleTabType.WorkPublications)">@Localizer.Translate("Publication", "Admin")</a>
                     <a href="#" class="list-group-item" id="project-work-cooperation" data-panel-type="@Html.Raw((int) ProjectModuleTabType.WorkCooperation)">@Localizer.Translate("Cooperation", "Admin")</a>
                     <a href="#" class="list-group-item" id="project-work-metadata" data-panel-type="@Html.Raw((int) ProjectModuleTabType.WorkMetadata)">@Localizer.Translate("Metadata", "Admin")</a>
                     <a href="#" class="list-group-item" id="project-work-categorization" data-panel-type="@Html.Raw((int) ProjectModuleTabType.WorkCategorization)">@Localizer.Translate("Categorization", "Admin")</a>
