Extract font-family style for reader to one file

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Editions/css/itjakub.editions-content.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Editions/css/itjakub.editions-content.less
@@ -1,7 +1,9 @@
-﻿.itj-page {
-	font-family: 'Times New Roman', Times, serif;
-	text-align: justify;
-	font-size: 120%;
+﻿@import "../../../css/ITJakub.Fonts.less";
+
+.itj-page {
+    font-family: @serif-font-family-reader;
+    text-align: justify;
+    font-size: 120%;
 
     table {
         width: 100%;
