--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/ProfessionalLiterature/css/itjakub.professionalliterature-content.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/ProfessionalLiterature/css/itjakub.professionalliterature-content.less
@@ -1,5 +1,7 @@
-﻿.itj-page {
-		font-family: 'Times New Roman', Times, serif;
+﻿@import "../../../css/ITJakub.Fonts.less";
+
+.itj-page {
+		font-family: @serif-font-family-reader;
 		text-align: justify;
 		font-size: 120%;
 }
