--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -1,4 +1,5 @@
 ﻿@import "../../../css/ITJakub.Colors.less";
+@import "../../../css/ITJakub.Fonts.less";
 @import "../../../css/ridics.checkbox.less";
 @import "@text-editor-variables.less";
 @import "@page-list-editor-vabiables.less";
@@ -1250,9 +1251,9 @@ table {
                                 cursor: not-allowed;
                             }
                         }
-                        
+
                         .itj-page {
-                            font-family: 'Times New Roman', Times, serif;
+                            font-family: @serif-font-family-reader;
                             text-align: justify;
                             font-size: 115%;
                         }
