--- a/UJCSystem/ITJakub.Web.Hub/Views/News/AddNews.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Views/News/AddNews.cshtml
@@ -35,13 +35,14 @@
                         @Html.ValidationMessageFor(model => model.Url, "", new { @class = "text-danger" })
                     </div>
                 </div>
-
-                <div class="form-group">
+                
+                @*Mobile app is not supported anymore so this select is not required*@
+                @*<div class="form-group">
                     @Html.LabelFor(model => model.ItemType, htmlAttributes: new { @class = "control-label col-md-1" })
                     <div class="col-md-10 selectContainer">
                         @Html.DropDownListFor(model => model.ItemType, Html.GetEnumSelectList<NewsTypeContractViewEnum>(), htmlAttributes: new { @class = "form-control" })
                     </div>
-                </div>
+                </div>*@
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.Content, htmlAttributes: new { @class = "control-label col-md-1" })
