finished dropdown loaders

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/css/Plugins/ITJakub.DropdownSelect.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/css/Plugins/ITJakub.DropdownSelect.less
@@ -140,3 +140,15 @@
     float: left;
     margin-right: 2rem;
 }
+
+.dropdown-loader-color {
+    div:before {
+        background-color: white !important;
+    }
+}
+
+.dropdown-align-loader {
+    display: inline-block;
+    float: right;
+    margin-right: 10px;
+}
