feedback loaders fixed

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/css/ITJakub.Feedbacks.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/css/ITJakub.Feedbacks.less
@@ -78,3 +78,12 @@
 #feedbacks-paginator {
     text-align: center;
 }
+
+.feedback-loader {
+    div:before {
+        background-color: white !important;
+    }
+    display: inline-block;
+    float: left;
+    margin-right: 10px;
+}
