Fixed fullscreen reader height

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/BookReader/css/readerStyle.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/BookReader/css/readerStyle.less
@@ -1,5 +1,5 @@
 ﻿#ReaderBodyDiv {
-  height: 550px;
+  min-height: 550px;
   @media screen and (max-width: @mobile-max-width) {
     margin: 0 15px;
   }
