--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/css/Plugins/ITJakub.Reader.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/css/Plugins/ITJakub.Reader.less
@@ -348,6 +348,13 @@ html,body {
     background-color: @background-color;
     width : 100%;
     height:100vh;
+    display: flex;
+    flex-direction: column;
+    
+    #ReaderBodyDiv {
+        flex-grow: 1;
+        
+    }
 }
 
 .reader .fullscreen-close-button {
